--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Bot</title>
+    <title>benyeung08 bot</title>
     <meta name="description" content="idk something about ur bot goes here">
     <meta name="theme-color" content="#f54254">
     <link rel="icon" type="image/png" sizes="300x250" href="assets/img/superthumb.png">
@@ -32,9 +32,10 @@
     </nav>
     </div>
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://cdn.discordapp.com/attachments/775384036285218869/776188652463456256/nUXFft6.gif" width="150" height="150" style="margin-top: 30px;">
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Bot</h1>
+        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">benyeung08 bot</h1>
         <p style="color: var(--secondary-text-color);">a bot that does random things!</p>
-        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/invite/" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
+        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/oauth2/authorize?client_id=798456064727187467&permissions=8&scope=bot" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite discord bot</a>
+	<div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.gg/pNb9xNyrkm" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Join Discord server</a>
 	
 	<a class="btn btn-primary smoothScroll shadow-none" role="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;"
         href="#feature">Features</a></div></div>
